Finished with edits for chapter 1 and its answer book

--- a/Chapter 1 - Getting started.ipynb
+++ b/Chapter 1 - Getting started.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ea33088ddfe6ac80ce87a5d6eb6aeccdf9244f4bfadd2e05fdab35ad349fccd9"
+  "signature": "sha256:f276238e97d99467bdcbbb98d5baa14f4ec6d5708691b0ecf0d8975e5e0428a8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -283,15 +283,14 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Now that you understand all about assigning values to variables, it is time for our second programming quiz. We want you to write some code that defines a variable, *name*, and assign to it a string that is your name. If your first name is shorter than 5 characters, use your last name. If your last name is also shorter than 5 characters, use the combination of you first and last name."
+      "Now that you understand all about assigning values to variables, it is time for our second programming quiz. We want you to write some code that defines a variable, *name*, and assign to it a string that is your name. If your first name is shorter than 5 characters, use your last name. If your last name is also shorter than 5 characters, use the combination of your first and last name."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n",
-      "print(name)"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -411,7 +410,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "last_letter = name[# fill in the last index of your name (tip indexes start at 0)]\n",
+      "last_letter = name[6]\n",
       "print(last_letter)"
      ],
      "language": "python",
@@ -503,7 +502,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "but_last_letter = # insert your code here\n",
+      "but_last_letter = name[-2]\n",
       "print(but_last_letter)"
      ],
      "language": "python",
@@ -546,7 +545,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "without_first_two_letters = name[2:]"
+      "without_first_two_letters = name[2:]\n",
+      "print(without_first_two_letters)"
      ],
      "language": "python",
      "metadata": {},
@@ -604,8 +604,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "middle_letters = # insert your code here\n",
-      "print(middle_letters)"
+      "middle_letters = name[#insert your code here]"
      ],
      "language": "python",
      "metadata": {},
@@ -757,10 +756,7 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "first_word = # insert your code here\n",
-      "print(first_word)"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -837,8 +833,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n",
-      "print(good_reads)"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1506,7 +1501,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Sometimes we have various conditions that should all evaluate to something different. For that Python provides the `elif` statement. We use it similar to `if` and `else`. Note however that you can only use `elif` after an `if` statement! Above we asked whether a book was in the collection. We can do the same thing for parts of strings or for items in a list. For example we could test whether the letter *a* is in the word *banana*:"
+      "Sometimes we have various conditions that should all evaluate to something different. For that Python provides the `elif` statement. Its use is similar to `if` and `else`. Note however that you can only use `elif` after an `if` statement! Above we asked whether a book was in the collection. We can do the same thing for parts of strings or for items in a list. For example we could test whether the letter *a* is in the word *banana*:"
      ]
     },
     {
@@ -1671,7 +1666,7 @@
      "input": [
       "word = \"banana\"\n",
       "if \"a\" in word and \"z\" in word:\n",
-      "    print(\"Both a and b are in \" + word)"
+      "    print(\"Both a and z are in \" + word)"
      ],
      "language": "python",
      "metadata": {},
@@ -1955,8 +1950,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "for x, y in good_reads.items():\n",
-      "    print(x + \" has score \" + str(y))"
+      "for book, score in good_reads.items():\n",
+      "    print(book + \" has score \" + str(score))"
      ],
      "language": "python",
      "metadata": {},
@@ -2097,7 +2092,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We have covered a lot of ground. Now it is time to put all what we learned together. The following quiz might be quite hard and we would be very impressed if you get it right! \n",
+      "We have covered a lot of ground. Now it is time to put all that we learned together. The following quiz might be quite hard and we will be very impressed if you get it right! \n",
       "\n",
       "What we want you to do is write code that counts the number of word tokens in which the letter *a* is present in a small corpus. You need to do this on the basis of a frequency distribution of words that is represented by a dictionary. In this dictionary `frequency_distribution`, keys are words and values are the frequencies. Assign your value to the variable `number_of_as`."
      ]
@@ -2117,7 +2112,13 @@
       "                          'ripening': 1, 'slippery': 1, 'touch': 1, 'twenty-five': 1,\n",
       "                          'ungracious': 2, 'unwell': 1, 'verses': 1, 'yards': 5}\n",
       "number_of_as = 0\n",
-      "# insert your code here"
+      "# insert your code here\n",
+      "\n",
+      "# The code below is to check your answer.  Please do not change it.\n",
+      "if number_of_as == 42:\n",
+      "    print('Well done!')\n",
+      "else:\n",
+      "    print('Your answer is not correct. Try again.')"
      ],
      "language": "python",
      "metadata": {},
