Final update before the course begins.

--- a/answerbook/Chapter 2 - First Steps - Greek.ipynb
+++ b/answerbook/Chapter 2 - First Steps - Greek.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7db664c9720bbad5c2bed4616e3882fdc9ce249b91245c59a520b6491a468f0a"
+  "signature": "sha256:d48e7a45ff6b4da0b4b26993abd2c18c42668411caf944494687c0f8fd1bb0cc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1742,6 +1742,7 @@
       "# now open the file data/romans-frequency-distribution.txt for writing\n",
       "outfile = open('data/romans-frequency-distribution.txt', mode='w')\n",
       "\n",
+      "#The following lines will write the frequency distribution to a text file\n",
       "for word, frequency in frequency_distribution.items():\n",
       "    outfile.write(word + \";\" + str(frequency) + '\\n')\n",
       "    \n",
