--- a/answerbook/Chapter 4 - Regular Expressions.ipynb
+++ b/answerbook/Chapter 4 - Regular Expressions.ipynb
@@ -600,7 +600,7 @@
      "input": [
       "ds = re.compile(r\" +\")\n",
       "for line in whitespace.split(s):\n",
-      "    print ds.sub(\" \", line)"
+      "    print(ds.sub(\" \", line))"
      ],
      "language": "python",
      "metadata": {},
