Remove the solution to a quiz question
There was a leftover solution to quiz question in the "and, or, not" section.

--- a/Chapter 1 - Getting started.ipynb
+++ b/Chapter 1 - Getting started.ipynb
@@ -1706,9 +1706,7 @@
       "    print(\"Both a and z are in \" + word)\n",
       "elif \"a\" in word or \"z\" in word:\n",
       "    print(\"a and/or z are not in \" + word)\n",
-      "# insert your code here\n",
-      "else:\n",
-      "    print(\"neither a nor z is in \" + word)"
+      "# insert your code here\n"
      ],
      "language": "python",
      "metadata": {},
