--- a/answerbook/Chapter 4 - Regular Expressions.ipynb
+++ b/answerbook/Chapter 4 - Regular Expressions.ipynb
@@ -118,11 +118,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "In principio erat verbum et verbum erat apud deum.\n"
+        "In principio erat verbum, et verbum erat apud Deum.\n"
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -150,7 +150,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -174,11 +174,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Xn prXncXpXX XrXt vXrbXm Xt vXrbXm XrXt XpXd dXXm.\n"
+        "Xn prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -195,8 +195,8 @@
       "lows = re.compile(r\"[a-z]\")\n",
       "without_ups = ups.sub(\"X\", s)\n",
       "print(without_ups)\n",
-      "without_ups = lows.sub(\"X\", s)\n",
-      "print(without_ups)"
+      "without_lows = lows.sub(\"X\", s)\n",
+      "print(without_lows)"
      ],
      "language": "python",
      "metadata": {},
@@ -210,7 +210,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -234,13 +234,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "ThXs Xs X tXxt  Xn thrXX   lXnXs\n",
-        "wXth  mXltXplX XnstXncXs Xf  \n",
-        "dXXblX spXcXs.\n"
+        "In prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
        ]
       }
      ],
-     "prompt_number": 74
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -267,7 +265,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -290,13 +288,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n",
-        "XXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n",
-        "XXXXXXXXXXXXXX\n"
+        "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n"
        ]
       }
      ],
-     "prompt_number": 76
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -323,7 +319,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -354,7 +350,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -386,16 +382,16 @@
        "text": [
         "None\n",
         "None\n",
-        "<_sre.SRE_Match object at 0x1aba2c0>\n",
-        "<_sre.SRE_Match object at 0x1aba790>\n",
-        "<_sre.SRE_Match object at 0x1aba2c0>\n",
-        "<_sre.SRE_Match object at 0x1aba790>\n",
-        "<_sre.SRE_Match object at 0x1aba2c0>\n",
-        "<_sre.SRE_Match object at 0x1aba790>\n"
+        "<_sre.SRE_Match object; span=(0, 2), match='mm'>\n",
+        "<_sre.SRE_Match object; span=(0, 3), match='mmm'>\n",
+        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
+        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
+        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
+        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -431,7 +427,7 @@
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -459,7 +455,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -489,14 +485,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<_sre.SRE_Match object at 0x1abade8>\n",
-        "<_sre.SRE_Match object at 0x1abae20>\n",
+        "<_sre.SRE_Match object; span=(18, 19), match='t'>\n",
+        "<_sre.SRE_Match object; span=(0, 0), match=''>\n",
         "None\n",
-        "<_sre.SRE_Match object at 0x1abae20>\n"
+        "<_sre.SRE_Match object; span=(0, 0), match=''>\n"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -521,14 +517,14 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "<_sre.SRE_Match object at 0x1a973d8>\n",
-        "<_sre.SRE_Match object at 0x1a973d8>\n",
+        "<_sre.SRE_Match object; span=(0, 4), match='good'>\n",
+        "<_sre.SRE_Match object; span=(0, 3), match='god'>\n",
         "None\n",
-        "<_sre.SRE_Match object at 0x1a973d8>\n"
+        "None\n"
        ]
       }
      ],
-     "prompt_number": 16
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -558,7 +554,7 @@
        ]
       }
      ],
-     "prompt_number": 17
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -588,18 +584,15 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 21
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
       "If we want to correct the double spaces, we could now do:\n",
       "    "
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     ]
     },
     {
      "cell_type": "code",
@@ -607,22 +600,21 @@
      "input": [
       "ds = re.compile(r\" +\")\n",
       "for line in whitespace.split(s):\n",
-      "    print ds.sub(\" \", line)"
+      "    print(ds.sub(\" \", line))"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "This is a text on three lines\n",
-        "with multiple instances of\n",
-        "double spaces.\n"
+       "ename": "SyntaxError",
+       "evalue": "invalid syntax (<ipython-input-22-495ed89ce4db>, line 3)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-495ed89ce4db>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print ds.sub(\" \", line)\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -636,7 +628,7 @@
      "collapsed": false,
      "input": [
       "s = \"these are vowels and consonants\"\n",
-      "consonants = re.compile(r\"[aeuoi]\\b\")\n",
+      "consonants = re.compile(r\"[^aeuoi ]\")\n",
       "print(consonants.sub(\"X\", s))"
      ],
      "language": "python",
@@ -646,11 +638,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "thesX arX vowels and consonants\n"
+        "XXeXe aXe XoXeXX aXX XoXXoXaXXX\n"
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
