Some changes for 2015 ESU summer school.

--- a/Chapter 3 - Text analysis - Greek.ipynb
+++ b/Chapter 3 - Text analysis - Greek.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:133de8682b15ae726e9d859f21cca04fd552d7c8ccffa690857ebc1fe6228b12"
+  "signature": "sha256:14c0fd1c1f504564f045d56bf022181fb1ab08561ba809fcfada20a1ef6b9d46"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -182,7 +182,7 @@
       "\n",
       "> 010405 V- 3AAI-S-- \u2e00\u1f14\u03c3\u03c4\u03b7\u03c3\u03b5\u03bd \u1f14\u03c3\u03c4\u03b7\u03c3\u03b5\u03bd \u1f14\u03c3\u03c4\u03b7\u03c3\u03b5(\u03bd) \u1f35\u03c3\u03c4\u03b7\u03bc\u03b9\n",
       "\n",
-      "As you can see, each line is divided by spaces into 7 parts separated by spaces.  The first part, the six digits, consists of three 2-digit groups that tell us the book, chapter and verse in which this word occurs, in this case Matthew (book 01) 4:5.  The second part represents the part of speech, here a verb.  The next part is an 8-part parsing code.  This one tells us that the verb is a `3`rd person `A`orist `A`ctive `I`ndicative `S`ingular verb form.  The final four parts represent the text of the word in different states: 1) exactly as it appears in the text, 2) without punctuation, 3) normalized, and 4) lemma.  And every word in the New Testament is represented by such a line.  Perhaps you can imagine some of the possibilities!"
+      "As you can see, each line is divided by spaces into 7 parts.  The first part, the six digits, consists of three 2-digit groups that tell us the book, chapter and verse in which this word occurs, in this case Matthew (book 01) 4:5.  The second part represents the part of speech, here a verb.  The next part is an 8-part parsing code.  This one tells us that the verb is a `3`rd person `A`orist `A`ctive `I`ndicative `S`ingular verb form.  The final four parts represent the text of the word in different states: 1) exactly as it appears in the text, 2) without punctuation, 3) normalized, and 4) lemma.  And every word in the New Testament is represented by such a line.  Perhaps you can imagine some of the possibilities!"
      ]
     },
     {
@@ -257,7 +257,7 @@
      "collapsed": false,
      "input": [
       "Third_Jn = ''\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -344,10 +344,10 @@
       "def remove_ext(filename):\n",
       "    # insert your code here\n",
       "    \n",
-      "    \n",
       "# these tests should return True if your code is correct\n",
       "print(remove_ext(\"data/NT/Raw/61-Mt-morphgnt.txt\") == \"data/NT/Raw/61-Mt-morphgnt\")\n",
-      "print(remove_ext(\"ridiculous_selfie.jpg\") == \"ridiculous_selfie\")"
+      "print(remove_ext(\"ridiculous_selfie.jpg\") == \"ridiculous_selfie\")\n",
+      "print(remove_ext(\"data/NT/Raw/61-Mt-morphgnt.txt\"))"
      ],
      "language": "python",
      "metadata": {},
@@ -369,10 +369,10 @@
       "def remove_dir(filepath):\n",
       "    # insert your code here\n",
       "    \n",
-      "    \n",
       "# these tests should return True if your code is correct\n",
       "print(remove_dir(\"data/NT/Raw/61-Mt-morphgnt.txt\") == \"61-Mt-morphgnt.txt\")\n",
-      "print(remove_dir(\"/a/kind/of/funny/filepath/to/file.txt\") == \"file.txt\")"
+      "print(remove_dir(\"/a/kind/of/funny/filepath/to/file.txt\") == \"file.txt\")\n",
+      "print(remove_dir(\"data/NT/Raw/61-Mt-morphgnt.txt\"))"
      ],
      "language": "python",
      "metadata": {},
@@ -391,7 +391,6 @@
      "input": [
       "def get_filename(filepath):\n",
       "    # insert your code here\n",
-      "    \n",
       "    \n",
       "# these tests should return True if your code is correct\n",
       "print(get_filename(\"data/NT/Raw/61-Mt-morphgnt.txt\") == '61-Mt-morphgnt')"
@@ -468,7 +467,6 @@
       "name = '61-Mt-morphgnt'\n",
       "def build_filename(f_name):\n",
       "    #insert your code here\n",
-      "    \n",
       "\n",
       "print(build_filename(name) == '61-Mt.txt')\n",
       "print(build_filename(name))"
@@ -512,7 +510,6 @@
      "input": [
       "def saveas_filename(filepath):\n",
       "    # insert your code here\n",
-      "    \n",
       "\n",
       "# these tests should return True if your code is correct\n",
       "print(saveas_filename(\"data/NT/Raw/61-Mt-morphgnt.txt\") == \"61-Mt.txt\")"
@@ -586,8 +583,6 @@
      "input": [
       "def bcv_word_extract(line):\n",
       "    #insert your code here\n",
-      "    \n",
-      "    return bcv, word\n",
       "\n",
       "print(bcv_word_extract('010405 V- 3AAI-S-- \u2e00\u1f14\u03c3\u03c4\u03b7\u03c3\u03b5\u03bd \u1f14\u03c3\u03c4\u03b7\u03c3\u03b5\u03bd \u1f14\u03c3\u03c4\u03b7\u03c3\u03b5(\u03bd) \u1f35\u03c3\u03c4\u03b7\u03bc\u03b9') == ('010405', '\u1f14\u03c3\u03c4\u03b7\u03c3\u03b5(\u03bd)'))"
      ],
@@ -599,19 +594,17 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "We now have the information that we need to build a list of words in each verse.  But first we need to figure out how to detect when the verse changes from one verse to another.  One way of doing this is demonstrated below."
+      "We now have the information that we need to build a list of words in each verse.  But how do we get this information into a dictionary?  Below we see the typical problem you will have with dictionaries."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "numbers = (1,1,1,1,2,2,2,3,3,3,4,4,4)\n",
-      "old_number = 1\n",
-      "for number in numbers:\n",
-      "    if number != old_number:\n",
-      "        print(number, ' != ', old_number)\n",
-      "        old_number = number"
+      "verses = {} #initialize our dictionary\n",
+      "for word in d['Mt'][1][1]: #loop through the list of words in Matthew 1:1\n",
+      "    verses['010101'] = word\n",
+      "print(verses)"
      ],
      "language": "python",
      "metadata": {},
@@ -621,40 +614,95 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Notice that the `if` statement is only executed when the new number changes from what it was before.  And if this is the case, then we need to change `old_number` so that it is the same as the new value of `number`.\n",
-      "\n",
-      "It is time to start putting our functions together to build the first level of our dictionary.  Below, write a function that will take a list of lines from one of our files as input and then will do the following:\n",
-      "\n",
-      "-  will initialize an empty dictionary `d`\n",
-      "-  will loop over every line in the file\n",
-      "-  will use our `bcv_word_extract` function to extract the book-chapter-verse number and the appropriate word from that line\n",
-      "-  will check to see if the book-chapter-verse number is the same as that of the previous line\n",
-      "-  if it isn't, it will add a new key to the dictionary with the book-chapter-verse number as the key and a new list with that word as its first element as the value for that key\n",
-      "-  if it is, it will append the word to the existing list of values for that key\n",
-      "-  will finally return the dictionary that has been built\n",
-      "\n",
-      "I have given you a few snippets of code to get you started"
+      "Notice that `verses['010101']` only has one word in it, the last one.  What we would like to have, instead, is a list of words.  But look at what happens when we try to do this."
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "def build_verses(lines):\n",
-      "    d = {}\n",
-      "    old_bcv = ''\n",
-      "    for line in lines:\n",
-      "        #insert your code here\n",
-      "        \n",
-      "        if bcv != old_bcv:\n",
-      "            #insert your code here\n",
-      "            \n",
-      "        else:\n",
-      "            #insert your code here\n",
-      "            \n",
-      "    return d\n",
+      "verses = {} #initialize our dictionary\n",
+      "for word in d['Mt'][1][1]: #loop through the list of words in Matthew 1:1\n",
+      "    verses['010101'].append(word)\n",
+      "print(verses)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now what is the problem?  The problem is that the key `'010101'` does not exist in our dictionary.  We could write a function that checks to see if the key exists and creates it if it doesn't, but there is a simpler way to do this.\n",
       "\n",
-      "Third_Jn_dict = build_verses(read_file_lines('data/NT/Raw/85-3Jn-morphgnt.txt'))"
+      "The builtin `collections` library has an object called `defaultdict`.  We can use `defaultdict` to specify the default __function__ that `defaultdict` will use when it initializes a non-existent key.  Check out the syntax below"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from collections import defaultdict\n",
+      "default_dict_1 = defaultdict(list)\n",
+      "default_dict_1['key_1'].append('value_1')\n",
+      "print(default_dict_1)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "As I said above, the default value for a `defaultdict` must be a function, like `list`, `dict`, `int`, etc.  So, for instance, we cannot use `defaultdict` to do this:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "default_dict_2 = defaultdict(0)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Don't worry.  There are other ways to assign a default value to a dictionary.  Look at the Python <a href='https://docs.python.org/3/library/stdtypes.html?highlight=setdefault#dict.setdefault'>`dict.setdefault()` documentation</a> if you are interested in this."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Now, you should be able to create basic dictionary function more easily.  Try it below following these steps:\n",
+      "\n",
+      "-  the function should take a filename as input\n",
+      "-  initialize an empty `defaultdict` `d`\n",
+      "-  use our `read_file_lines` function to read the file into a list of lines\n",
+      "-  loop over every line in the file\n",
+      "-  use our `bcv_word_extract` function to extract the book-chapter-verse number and the appropriate word from that line\n",
+      "-  append the word to the key from the `bcv_word_extract` function\n",
+      "-  will finally return the dictionary that has been built"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from collections import defaultdict\n",
+      "def build_verses(filename):\n",
+      "    #insert your code here\n",
+      "    \n",
+      "    return d\n",
+      "    \n",
+      "\n",
+      "Third_Jn_dict = build_verses_2('data/NT/Raw/85-3Jn-morphgnt.txt')"
      ],
      "language": "python",
      "metadata": {},
@@ -676,7 +724,7 @@
      "source": [
       "OK, so now we have a dictionary that has as its keys the `bcv` numbers for every verse in the book and as its values lists of the words in each of the verses.  Now the job is to split the keys into book, chapter, and verse and use this information to build our biblical dictionary that will be in the form that we saw above.\n",
       "\n",
-      "First, let's build a function that takes as input the key-value pair from a dictionary and returns three objects: the chapter number (as `int`), the verse number (as `int`), the the list of words."
+      "First, let's build a function that takes as input the key as `str` from a dictionary and returns two objects: the chapter number (as `int`) and the verse number (as `int`)."
      ]
     },
     {
@@ -685,6 +733,8 @@
      "input": [
       "def chapter_verse(key):\n",
       "    #insert your code here\n",
+      "    \n",
+      "    return chapter, verse\n",
       "    \n",
       "\n",
       "print(chapter_verse('250101') == (1, 1))\n",
@@ -702,7 +752,7 @@
       "\n",
       "N.B.: Use the `read_file_lines`, `build_verses`, and `chapter_verse` functions above.\n",
       "\n",
-      "If you are getting a `KeyError` in your code, look closely at the error to see if you can figure out how to fix it.  Remember, you can't add a sub-key to a key if the key itself does not yet exist in your dictionary."
+      "If you are getting a `KeyError` in your code, look closely at the error to see if you can figure out how to fix it.  Remember, you can't add a sub-key to a key if the key itself does not yet exist in your dictionary.  You might try to figure out how to use a `defaultdict` for this step as well."
      ]
     },
     {
@@ -710,7 +760,6 @@
      "collapsed": false,
      "input": [
       "def build_book_dict(file):\n",
-      "    book_dict = {}\n",
       "    #insert your code here\n",
       "    \n",
       "    return book_dict\n",
@@ -725,7 +774,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "print(Third_Jn_final)"
+      "print(Third_Jn_final)\n",
+      "print(Third_Jn_final[1][1])"
      ],
      "language": "python",
      "metadata": {},
