--- a/answerbook/Chapter 3 - Text analysis - Greek (answers).ipynb
+++ b/answerbook/Chapter 3 - Text analysis - Greek (answers).ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3c033e962b15848f1312f74437729f9344786eac6b3d8e1efb49e273c3f14ad0"
+  "signature": "sha256:d5c761a7f6da547afae15290b32e4894c452ae7a88e4e6dc44db1c4fa0e976ed"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -530,7 +530,7 @@
      "input": [
       "def get_filename(filepath):\n",
       "    # insert your code here\n",
-      "    return remove_ext(basename(filepath))\n",
+      "    return remove_ext(remove_dir(filepath))\n",
       "    \n",
       "# these tests should return True if your code is correct\n",
       "print(get_filename(\"data/NT/Raw/61-Mt-morphgnt.txt\") == '61-Mt-morphgnt')"
@@ -594,7 +594,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Notice that it strips __all__ occurrences of the string from the left and/or right side.  Below, right a short bit of code using `strip` that gives us what we want."
+      "Notice that it strips __all__ occurrences of the string from the left and/or right side.  Below, write a short bit of code using `strip` that gives us what we want."
      ]
     },
     {
@@ -602,7 +602,8 @@
      "collapsed": false,
      "input": [
       "name = '61-Mt-morphgnt'\n",
-      "new_name = name.strip('morphgnt').strip('-')#insert your code here\n",
+      "#insert your code here\n",
+      "new_name = name.strip('morphgnt').strip('-')\n",
       "\n",
       "print(new_name == '61-Mt')\n",
       "print(new_name)"
@@ -907,7 +908,7 @@
      "source": [
       "OK, so now we have a dictionary that has as its keys the `bcv` numbers for every verse in the book and as its values lists of the words in each of the verses.  Now the job is to split the keys into book, chapter, and verse and use this information to build our biblical dictionary that will be in the form that we saw above.\n",
       "\n",
-      "First, let's build a function that takes as input the key-value pair from a dictionary and returns three objects: the chapter number (as `int`), the verse number (as `int`), the the list of words."
+      "First, let's build a function that takes as input the key-value pair from a dictionary and returns two objects: the chapter number (as `int`) and the verse number (as `int`)."
      ]
     },
     {
