--- a/Chapter 4 - Regular Expressions.ipynb
+++ b/Chapter 4 - Regular Expressions.ipynb
@@ -12,7 +12,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "Chapter 6 - Regular Expressions"
+      "Chapter 4 - Regular Expressions"
      ]
     },
     {
@@ -30,8 +30,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -48,8 +47,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 3
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -66,8 +64,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 4
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -85,16 +82,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In principio erat XXX, et XXX erat apud Deum.\n"
-       ]
-      }
-     ],
-     "prompt_number": 5
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -113,16 +101,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In principio erat verbum, et verbum erat apud Deum.\n"
-       ]
-      }
-     ],
-     "prompt_number": 6
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -141,16 +120,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
-       ]
-      }
-     ],
-     "prompt_number": 7
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -169,16 +139,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Xn prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
-       ]
-      }
-     ],
-     "prompt_number": 8
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -200,17 +161,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Xn principio erat verbum, et verbum erat apud Xeum.\n",
-        "IX XXXXXXXXX XXXX XXXXXX, XX XXXXXX XXXX XXXX DXXX.\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -229,16 +180,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -252,20 +194,11 @@
      "collapsed": false,
      "input": [
       "p = re.compile(r\"(ri)|(um)|(Th)\")\n",
-      "print(vowel_pattern.sub(\"X\", s))"
+      "print(p.sub(\"X\", s))"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In prXncXpXX XrXt vXrbXm, Xt vXrbXm XrXt XpXd DXXm.\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -283,16 +216,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\n"
-       ]
-      }
-     ],
-     "prompt_number": 12
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -310,22 +234,13 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In principio erat verbum, et verbum erat apud DeumX\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "By the way, there exist more characters that you might have to escape using a backslash. This is because they are part of the syntax that use to define regular expressions: if you don't escape them, Python will not know that you are looking for an literal match. Characters that you typically might want to escape include: ( + ? . * ^ $ ( ) [ ] { } | \\ ) ,. For example:"
+      "By the way, there are more characters that you might have to escape using a backslash. This is because they are part of the syntax used to define regular expressions: if you don't escape them, Python will not know that you are looking for an literal match. Characters that you typically might want to escape include: ( + ? . * ^ $ ( ) [ ] { } | \\ ) ,. For example:"
      ]
     },
     {
@@ -340,17 +255,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "In principio [erat] verbum, et verbum erat apud Deum.\n",
-        "In principio XeratX verbum, et verbum erat apud Deum.\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -375,29 +280,13 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "None\n",
-        "None\n",
-        "<_sre.SRE_Match object; span=(0, 2), match='mm'>\n",
-        "<_sre.SRE_Match object; span=(0, 3), match='mmm'>\n",
-        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
-        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
-        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n",
-        "<_sre.SRE_Match object; span=(0, 4), match='mmmm'>\n"
-       ]
-      }
-     ],
-     "prompt_number": 15
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "With the curly brackets, you indicate that you are only interested in the letter 'm' if it occurs 2,3 or 4 times in a row in the string you search. Because `None` is returned if not a single match was found, you can use the outcome of `match()`in an if-statement. The following example shows how you can also use the curly brackets to match an exact number of occurences (in this case three a's)."
+      "With the curly brackets, you indicate that you are only interested in the letter 'm' if it occurs 2,3 or 4 times in a row in the string you search. Because `None` is returned if not a single match was found, you can use the outcome of `match()`in an if-statement. The following example shows how you can also use the curly brackets to match an exact number of occurences (in this case five a's)."
      ]
     },
     {
@@ -410,24 +299,14 @@
       "else:\n",
       "    print(\"Nope...\")\n",
       "# or:\n",
-      "if pattern.match(\"aa\"):\n",
+      "if pattern.match(\"aaaa\"):\n",
       "    print(\"Found it!\")\n",
       "else:\n",
       "    print(\"Nope...\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "Found it!\n",
-        "Nope...\n"
-       ]
-      }
-     ],
-     "prompt_number": 16
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -446,16 +325,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "My thesis on biology contains a lot of double spaces. I will remove them.\n"
-       ]
-      }
-     ],
-     "prompt_number": 17
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -480,25 +350,13 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<_sre.SRE_Match object; span=(18, 19), match='t'>\n",
-        "<_sre.SRE_Match object; span=(0, 0), match=''>\n",
-        "None\n",
-        "<_sre.SRE_Match object; span=(0, 0), match=''>\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
+     "outputs": []
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Interestingly, you also use regular expression to search inside words. Can you explain why the following patterns (don't) match? "
+      "Interestingly, you also use regular expressions to search inside words. Can you explain why the following patterns (don't) match? "
      ]
     },
     {
@@ -512,19 +370,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<_sre.SRE_Match object; span=(0, 4), match='good'>\n",
-        "<_sre.SRE_Match object; span=(0, 3), match='god'>\n",
-        "None\n",
-        "None\n"
-       ]
-      }
-     ],
-     "prompt_number": 19
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -545,16 +391,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['This', 'is', 'a', 'text', 'on', 'three', 'lines', 'with', 'multiple', 'instances', 'of', 'double', 'spaces.']\n"
-       ]
-      }
-     ],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -575,16 +412,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "['This is a text  on three   lines', 'with  multiple instances of', 'double spaces.']\n"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -604,17 +432,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "SyntaxError",
-       "evalue": "invalid syntax (<ipython-input-22-495ed89ce4db>, line 3)",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-22-495ed89ce4db>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    print ds.sub(\" \", line)\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -633,16 +451,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "XXeXe aXe XoXeXX aXX XoXXoXaXXX\n"
-       ]
-      }
-     ],
-     "prompt_number": 24
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -663,7 +472,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "- Ex. 1 - Write Python code that loads data items from a file that has the format below. Use regular expresions to parse the lines and the data fields: take care of the multiple whitespace characters that might occur. Fill a dictionary using the two data fields. Use regular expressions as much as possible!\n",
+      "- Ex. 1 - Write Python code that loads data items from a file that has the format below. Use regular expressions to parse the lines and the data fields: take care of the multiple whitespace characters that might occur. Fill a dictionary using the two data fields. Use regular expressions as much as possible!\n",
       "\n",
       "Example data:\n",
       "\n",
@@ -756,89 +565,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "html": [
-        "<style>\n",
-        "    @font-face {\n",
-        "        font-family: \"Computer Modern\";\n",
-        "        src: url('http://mirrors.ctan.org/fonts/cm-unicode/fonts/otf/cmunss.otf');\n",
-        "    }\n",
-        "    div.cell {\n",
-        "        width:800px;\n",
-        "        margin-left:auto;\n",
-        "        margin-right:auto;\n",
-        "    }\n",
-        "    div.cell, .input.hbox {\n",
-        "    display:block;\n",
-        "}\n",
-        "    h1 {\n",
-        "        font-family: \"Charis SIL\", Palatino, serif;\n",
-        "    }\n",
-        "    h4{\n",
-        "        margin-top:12px;\n",
-        "        margin-bottom: 3px;\n",
-        "       }\n",
-        "    div.text_cell_render{\n",
-        "        font-family: Computer Modern, \"Helvetica Neue\", Arial, Helvetica, Geneva, sans-serif;\n",
-        "        line-height: 145%;\n",
-        "        font-size: 120%;\n",
-        "        width:800px;\n",
-        "        margin-left:auto;\n",
-        "        margin-right:auto;\n",
-        "    }\n",
-        "    .CodeMirror{\n",
-        "            font-family: \"Source Code Pro\", source-code-pro,Consolas, monospace;\n",
-        "    }\n",
-        "    .prompt{\n",
-        "        display: None;\n",
-        "    }\n",
-        "    .text_cell_render h5 {\n",
-        "        font-weight: 300;\n",
-        "        font-size: 16pt;\n",
-        "        color: #4057A1;\n",
-        "        font-style: italic;\n",
-        "        margin-bottom: .5em;\n",
-        "        margin-top: 0.5em;\n",
-        "        display: block;\n",
-        "    }\n",
-        "    \n",
-        "    .warning{\n",
-        "        color: rgb( 240, 20, 20 )\n",
-        "        }\n",
-        "\n",
-        "    blockquote {\n",
-        "    border-left: 4px solid #DDDDDD;\n",
-        "    color: #777777;\n",
-        "        padding: 0 15px;\n",
-        "        }\n",
-        "\n",
-        "</style>\n",
-        "<script>\n",
-        "    MathJax.Hub.Config({\n",
-        "                        TeX: {\n",
-        "                           extensions: [\"AMSmath.js\"]\n",
-        "                           },\n",
-        "                tex2jax: {\n",
-        "                    inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
-        "                    displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ]\n",
-        "                },\n",
-        "                displayAlign: 'center', // Change this to 'center' to center equations.\n",
-        "                \"HTML-CSS\": {\n",
-        "                    styles: {'.MathJax_Display': {\"margin\": 4}}\n",
-        "                }\n",
-        "        });\n",
-        "</script>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 1,
-       "text": [
-        "<IPython.core.display.HTML at 0x19e06b0>"
-       ]
-      }
-     ],
-     "prompt_number": 1
+     "outputs": []
     }
    ],
    "metadata": {}
