Corrections to the chapters

--- a/Chapter 2 - First Steps - Greek.ipynb
+++ b/Chapter 2 - First Steps - Greek.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0b9b4fd8a94ea2bafc20541aaf5f6c809d3bacbcee7fbea4be65e3aaeef7869d"
+  "signature": "sha256:d90fbd4683d73076e6e47f7e36d219f482cf30b57fd5c26ac2f6eb64e679dabc"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -179,7 +179,7 @@
      "input": [
       "number_of_epsilons = 0\n",
       "# insert your code here\n",
-      "\n",
+      "        \n",
       "# The following test should print True if your code is correct \n",
       "print(number_of_epsilons == 44)"
      ],
@@ -438,7 +438,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
