--- a/Chapter 1 - Getting started.ipynb
+++ b/Chapter 1 - Getting started.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:936c6c5b304887a3c6bed66ff08c79c5b42836add355480339b97d4505e68f8e"
+  "signature": "sha256:2bf8aa9c989637cd1050e2eb230f5360264b155354faf8994e7e08042046b4a2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,7 +73,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -290,7 +290,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -502,7 +502,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#insert your code here\n"
+      "#insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -603,7 +603,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#insert your code here\n"
+      "#insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -622,7 +622,7 @@
      "input": [
       "word1 = \"human\"\n",
       "word2 = \"opportunities\"\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -756,7 +756,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "#insert your code here\n"
+      "#insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -834,7 +834,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -946,7 +946,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1101,7 +1101,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1242,7 +1242,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1603,7 +1603,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1711,7 +1711,7 @@
       "    print(\"Both a and z are in \" + word)\n",
       "elif \"a\" in word or \"z\" in word:\n",
       "    print(\"a and/or z are not in \" + word)\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1809,7 +1809,7 @@
      "collapsed": false,
      "input": [
       "numbers = []\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -1827,7 +1827,7 @@
      "collapsed": false,
      "input": [
       "numbers = []\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -2052,7 +2052,7 @@
      "collapsed": false,
      "input": [
       "colors = [\"yellow\", \"red\", \"green\", \"blue\", \"purple\"]\n",
-      "# insert your code here\n"
+      "# insert your code here"
      ],
      "language": "python",
      "metadata": {},
@@ -2071,7 +2071,7 @@
      "input": [
       "colors = [\"yellow\", \"red\", \"green\", \"blue\", \"purple\"]\n",
       "colors_with_r = []\n",
-      "# insert you code here\n"
+      "# insert you code here"
      ],
      "language": "python",
      "metadata": {},
@@ -2144,7 +2144,6 @@
       "                          'ungracious': 2, 'unwell': 1, 'verses': 1, 'yards': 5}\n",
       "number_of_as = 0\n",
       "# insert your code here\n",
-      "\n",
       "\n",
       "# The code below is to check your answer.  Please do not change it.\n",
       "if number_of_as == 42:\n",
