Correction on "a" and...

--- a/Chapter 1 - Getting started.ipynb
+++ b/Chapter 1 - Getting started.ipynb
@@ -1566,7 +1566,7 @@
      "collapsed": false,
      "input": [
       "word = \"rocket sience\"\n",
-      "if \"a\" and 's' in word:# and 's' in word:\n",
+      "if \"a\" in word and 's' in word:# and 's' in word:\n",
       "    print(word + \" contains the letter a and s\")\n",
       "elif \"s\" in word:\n",
       "    print(word + \" contains the letter s\")\n",
