--- a/Chapitre 1 - Commencer.ipynb
+++ b/Chapitre 1 - Commencer.ipynb
@@ -1074,7 +1074,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can put this to use to enhance our good read collection with a score for every book we have. An entry in our collection will consist of a score within the range of 1 and 10 and the title of our book. The first element is the title; the second the score: `[title, score]`. We initialize an empty list:"
+    "Nous pouvons utiliser ça pour améliorer notre liste de bonnes lectures en ajoutant un score pour chaque livre que l'on a. Une entrée dans notre collection se composera d'un score dans l'intervalle de 1 et 10 et du titre de notre livre. Le premier élément est le titre; le deuxième le score: `[titre, score]`. Nous initialisons une liste vide:"
    ]
   },
   {
@@ -1103,9 +1103,9 @@
    },
    "outputs": [],
    "source": [
-    "good_reads.append([\"Pride and Prejudice\", 8])\n",
-    "good_reads.append([\"A Clockwork Orange\", 9])\n",
-    "print(good_reads)"
+    "bonnes_lectures.append([\"Les poèmes de Paul Celan\", 8])\n",
+    "bonnes_lectures.append([\"Voyage au bout de la nuit\", 9])\n",
+    "print(bonnes_lectures)"
    ]
   },
   {
@@ -1119,14 +1119,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Quiz!"
+    "#### Exercice"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Update the `good_reads` collection with some of your own books and give them all a score. Can you print out the score you gave to the first book in the list? (Tip: you can pile up indexes)"
+    "Mettez à jour `bonnes_lectures` avec quelques livres de votre choix et donnez leur un score. Pouvez vous afficher le score du premier livre de la liste ? Et le titre de l'avant-dernier ?"
    ]
   },
   {
@@ -1137,7 +1137,7 @@
    },
    "outputs": [],
    "source": [
-    "# insert your code here"
+    "# Votre code ici"
    ]
   },
   {
@@ -1151,20 +1151,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### What we have learnt"
+    "##### Ce que nous avons appris"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To finish this section, here is an overview of the new concepts and functions you have learnt. Go through them and make sure you understand them all.\n",
+    "Pour finir cette section, voici un récapitulatif des concepts appris. Lisez la liste et posez des questions si certaines choses ne sont pas claires.\n",
     "\n",
-    "-  list\n",
-    "-  *mutable* versus *immutable*\n",
+    "-  liste\n",
+    "-  *mutable* vs. *immutable*\n",
     "-  `.split()`\n",
     "-  `.append()`\n",
-    "-  nested lists\n",
+    "-  listes imbriquées\n",
     "-  `.remove()`\n",
     "-  `.sort()`"
    ]
