Correction de coquilles et lancement de la traduction du chapitre 2

--- a/Chapitre 1 - Au début était la variable.ipynb
+++ b/Chapitre 1 - Au début était la variable.ipynb
@@ -23,11 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A vos marques, prêts, partez!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"A vos marques, prêts, partez!\")"
    ]
@@ -95,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "x = 8\n",
+    "x = 2\n",
     "print(x)"
    ]
   },
@@ -462,7 +470,7 @@
    },
    "outputs": [],
    "source": [
-    "print(len(name))"
+    "print(len(nom))"
    ]
   },
   {
@@ -481,7 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "print(name[len(name)-1])"
+    "print(nom[len(nom)-1])"
    ]
   },
   {
@@ -576,7 +584,7 @@
    },
    "outputs": [],
    "source": [
-    "dernieres_deux_lettres = name[-2:]\n",
+    "dernieres_deux_lettres = nom[-2:]\n",
     "print(dernieres_deux_lettres)"
    ]
   },
